feat(order): Added the ability to mark orders as read, check unread orders and clear unread orders
